--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^4.0.0",
-    "react-router-dom": "^4.0.0"
+    "react-router-dom": "^4.0.0",
+    "semantic-ui-css": "^2.2.9",
+    "semantic-ui-react": "^0.67.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5",
