--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^15.4.2",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
+    "react-scroll-to-component": "^1.0.1",
     "semantic-ui-css": "^2.2.9",
     "semantic-ui-react": "^0.67.0"
   },
