--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-preset-react": "^6.23.0",
     "classnames": "^2.2.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-markdown": "^2.4.6",
     "react-mt-svg-lines": "^0.6.0",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
@@ -16,7 +18,13 @@
   },
   "devDependencies": {
     "react-scripts": "0.9.5",
-    "webpack-dev-server": "^2.4.1"
+    "webpack-dev-server": "^2.4.1",
+    "babel-core": "^6.7.6",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "webpack": "^1.12.9"
   },
   "scripts": {
     "start": "react-scripts start",
