--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jquery": "^3.2.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-highlight": "^0.9.0",
     "react-markdown": "^2.4.6",
     "react-mt-svg-lines": "^0.6.0",
     "react-router": "^4.0.0",
