--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "babel-preset-react": "^6.23.0",
     "classnames": "^2.2.5",
+    "ejs": "^2.5.6",
     "jquery": "^3.2.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
