--- a/package.json
+++ b/package.json
@@ -12,22 +12,27 @@
     "react-highlight": "^0.9.0",
     "react-markdown": "^2.4.6",
     "react-mt-svg-lines": "^0.6.0",
+    "react-redux": "^5.0.4",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
+    "react-router-redux-middleware": "^1.1.0",
     "react-scroll-to-component": "^1.0.1",
     "react-sticky": "^5.0.5",
+    "redux": "^3.6.0",
     "semantic-ui-css": "^2.2.9",
     "semantic-ui-react": "^0.67.0"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5",
-    "webpack-dev-server": "^2.4.1",
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-react-app": "^2.2.0",
     "babel-preset-stage-0": "^6.5.0",
-    "webpack": "^1.12.9"
+    "create-react-server": "^0.2.0",
+    "react-scripts": "0.9.5",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
