refactor: add server rendering

--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run build-server",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-server": "SET NODE_ENV=production babel --source-maps --out-dir build-lib src",
+    "server": "node ./build-lib/server.js"
   }
 }
