--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.24.1",
     "babel-preset-react": "^6.23.0",
     "classnames": "^2.2.5",
     "ejs": "^2.5.6",
