--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build & npm run build-server",
+    "build": "npm run build-server",
     "build-win": "react-scripts build & npm run build-server-win",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
