--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "build-win": "react-scripts build && npm run build-server-win",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "build-server": "NODE_ENV=development babel --source-maps --out-dir build-lib src",
+    "build-server": "NODE_ENV=development",
     "build-server-win": "set NODE_ENV=development babel --source-maps --out-dir build-lib src",
     "server": "node ./build-lib/server.js"
   }
