--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.5",
     "ejs": "^2.5.6",
     "jquery": "^3.2.1",
+    "jspdf": "^1.3.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-highlight": "^0.9.0",
