--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-app": "^2.2.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.26.0",
     "create-react-server": "^0.2.0",
     "react-scripts": "0.9.5",
     "webpack": "^1.12.9",
